assets/stylesheets/stylesheet.css
html {
  display: flex;
  justify-content: center;
  font-family: 'VT323', monospace;
  /*font-family: 'Press Start 2P';*/
}

.game-container {
  width: 100vh;
  height: 90vh;
  min-height: 800px;
  border: 5px solid red;
  text-align: center;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 20px;
  padding-right: 20px;
}

.github {
  background-image: url(../images/github.png);
  background-repeat: no-repeat;
  background-position: center;
  width: 75px;
  height: 75px;
  display: block;
}

.linkedin {
  background-image: url(../images/linkedin.png);
  background-repeat: no-repeat;
  background-position: center;
  width: 75px;
  height: 75px;
  display: block;
}

/*Top half*/
.top {
  height: 70%;
  display: flex;
  justify-content: space-between;
  border-top: 2px solid red;
  border-bottom: 2px solid red;
}

.title {
  font-size: 50px;
}

/* Status */
.status-bar {
  width: 20%;
  display: flex;
  flex-direction: column;
  text-align: center;
  margin-left: 20px;
}

.status-bar > div {
  margin: 5%;
}

.status-bar > span {
  font-size: 25px;
}

#health {

}

#hunger {
    width: 90%;
    height: 30px;
    background-color: grey;
}
#hungerBar {
    height: 100%;
    background-color: green;
    width: 50%;
}

#happiness {
    width: 90%;
    height: 30px;
    background-color: grey;
}
#happinessBar {
    height: 100%;
    background-color: green;
    width: 50%;
}

#cleanliness {
    width: 90%;
    height: 30px;
    background-color: grey;
}
#cleanlinessBar {
    height: 100%;
    background-color: green;
    width: 50%;
}

#hungerPercentage {
  font-size: 30px;
  color: white;
}

#cleanlinessPercentage {
  font-size: 30px;
  color: white;
}

#happinessPercentage {
  font-size: 30px;
  color: white;
}

/*Display*/
.canvas-container {
  width: 50%;
  padding: 20px;
}

#canvas {
  width: 100%;
  height: 100%;
}

/*Store*/
.store-container {
  width: 20%;
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.moneyLabel {
  font-size: 30px;
  padding: 20px;
}

@keyframes blinker {
  50% { opacity: 0; }
}

.moneyLabel-blink {
  font-size: 30px;
  padding: 20px;
  color: red;
  animation: blinker .2s;
  animation-iteration-count: 5;
}


.item-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.item-container > button {
  margin: 10px;
  margin: 10px;
  width: 130px;
  height: 100px;
  border-style: none;
  font-family: 'VT323';
  font-size: 30px;
  text-align: center;
}

.item-container > button:hover {
  cursor: pointer;
  background-color: orange;
}

.item-container > button:active {
  background-color: orangered;
}

.buyFood {

}

.buyBrush {

}

.buyToy {

}



/*Bottom*/
.bottom {
  height: 15%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.button-money {
  height: 100%;
  width: 100%;
  border-style: none;
  transition: all .2s;
  font-family: 'VT323';
  font-size: 50px;
}

.button-money:hover {
  cursor: pointer;
  background-color: orange;
}

.button-money:active {
  background-color: orangered;
}

